--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="buttons">
         <a href="research note.pdf">Research Notes</a>
-        <a href="https://app.diagrams.net/#G1X7TSXOtAjbDFikSPm5J4af2G4dVI_RzA#%7B%22pageId%22%3A%22mFWIIRnueXCLKf2M11NT%22%7D">Relational Graph</a>
+        <a href="born_death_process.drawio.html">Relational Graph</a>
         <a href="https://colab.research.google.com/drive/1chU4JvqlK75ARtrsKmFihzIh44WERMMd#scrollTo=i1X9edOOSGBa">Python Notebook</a>
         <a href="https://projects.scss.tcd.ie/project/probabilities-of-interval-relations/">Dissertation</a>
     </div>
