Update HTML file with left-aligned descriptions

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="buttons">
         <a href="https://docs.google.com/presentation/d/1FzPs4lSyfMiYtGnshxsGzUnx34WredmP">Presentation</a>
-        <a href="born_death_process.drawio.html">Relational Graph</a>
+        <a href="Image.html">Relational Graph</a>
         <a href="https://colab.research.google.com/drive/1tiX0pL4Pt95DFdxkRXYV5BvEdrFKX242#scrollTo=lmTsXixZNkeW">Python Notebook</a>
         <a href="https://projects.scss.tcd.ie/project/probabilities-of-interval-relations/">Dissertation</a>
     </div>
