--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <header>
-        <h1>Probabilities of interval relations</h1>
+        <h1>Probabilities of Allen Interval Relations</h1>
         <p>The interval algebra of Allen 1983 is one of the most commonly used approaches to time and events in natural language processing (Jurafsky and Martin 2023, chapter 22). The aim of this project is to introduce probabilities on relations between intervals, based on transitions between states, conceived at different granularities and recording varying extents of history.</p>
     </header>
     <div class="personal-info">
